route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: myminio-console
spec:
  port:
    targetPort: http-console
  tls:
    termination: edge
  to:
    kind: ""
    name: myminio-console
    weight: null
status: {}
